# wikidesk

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE-MIT  README.md  RESEARCH_PROMPT.example.md  config.example.toml  dist-workspace.toml  hooksmith.yaml  prompt.example.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
client/: CHANGELOG.md  Cargo.toml
client/src/: agent_setup.rs  client_mirror.rs  main.rs
docs/adr/: 0001-derived-multi-wiki-routing.md  0002-jj-research-workspaces.md  0003-async-remote-sync-for-jj-wikis.md  0004-operation-context-by-construction.md
sandbox-env/: flake.nix
server/: CHANGELOG.md  Cargo.toml
server/src/: agent.rs  api.rs  config.rs  delivery.rs  main.rs  queue.rs  remote_sync.rs  research_task.rs  rewrite.rs  runtime.rs  server.rs  surface.rs  wiki_instance.rs
server/src/config/: normalize.rs  raw.rs
server/src/research_task/: jj.rs  published.rs
server/src/research_task/jj/: command.rs  workspace.rs
server/src/runner/: acp.rs  generic.rs  mod.rs  process.rs  stream_json.rs
shared/: CHANGELOG.md  Cargo.toml
shared/src/: lib.rs  sync.rs
src/: agent.rs  config.rs  main.rs  queue.rs  rewrite.rs  server.rs
