[workspace]
members = ["server", "client", "shared"]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ilya-epifanov/wikidesk"

[workspace.dependencies]
wikidesk-shared = { path = "shared", version = "0.1.2" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
