[package]
name = "wikidesk-client"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
wikidesk-shared = { path = "../shared" }
