[package]
name = "wikidesk-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server that wraps LLM-wiki into a shared research service for AI coding agents."
readme = "../README.md"
keywords = ["mcp", "wiki", "llm", "agent", "research"]
categories = ["command-line-utilities", "development-tools"]
include = [
  "/src/**/*",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE-MIT",
  "/LICENSE-APACHE",
]

[dependencies]
rmcp = { version = "1.3", features = ["server", "macros", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "sync", "fs"] }
axum = "0.8"
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
config = "0.15"
uuid = { version = "1", features = ["v4"] }
regex = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
async-trait = "0.1"
agent-client-protocol = "0.10"
strum = { version = "0.28", features = ["derive"] }
wikidesk-shared.workspace = true

[dev-dependencies]
tempfile = "3"
