[package]
name = "wikidesk-shared"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and utilities for wikidesk server and client."
readme = "../README.md"
keywords = ["mcp", "wiki", "llm", "agent", "research"]
include = [
  "/src/**/*",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE-MIT",
  "/LICENSE-APACHE",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3", features = ["hex"] }
sha2 = "0.10"
thiserror = "2"
